hphp/hack/test/typecheck/return_mismatch/void_return3.php.exp
File "void_return3.php", line 17, characters 5-25:
You cannot return a value (Typing[4084])
  File "void_return3.php", line 16, characters 16-19:
  This is a `void` function
